# PyramidsCSP

./: CMakeLists.txt  main.cpp
src/algorithm/: PyramidAlgorithm.cpp  PyramidAlgorithm.hpp  SquareHelper.cpp  SquareHelper.hpp
src/sdk/: LifeController.cpp  LifeController.hpp
